# qa_Poetry

poetry_env/: pyproject.toml
poetry_env/pages/: page_reg.py
poetry_env/tests/: reg_test.py
